bug fix for pagination alignment

--- a/enzyme-portal/ep-website/src/main/webapp/resources/css/enzyme.css
+++ b/enzyme-portal/ep-website/src/main/webapp/resources/css/enzyme.css
@@ -549,7 +549,7 @@ table#enzymeResultsProteins tr.proteinRow{
     list-style-type: none;
 }
 
-.paginationContainer{
+.paginationContainer, .pagination-container{
     float: right;
 }
 
